Project Gesty {
  database_type: 'PostgreSQL'
  Note: '''
    # Gesty Account Service Database
  '''
}

Table "account" {
  "id" bigserial [pk]
  "code" varchar [not null, unique]
  "company_name" varchar [not null]
  "phone" varchar
  "email" varchar [not null]
  "web_url" varchar
  "active" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
}

Table "account_address" {
  "account_id" bigserial [pk]
  "country" varchar [not null]
  "state" varchar [not null]
  "sub_state" varchar
  "street" varchar [not null]
  "number" varchar [not null]
  "unit" varchar
  "zip_code" varchar [not null]
  "lat" float8
  "lng" float8
}

Table "account_module" {
  "id" bigserial [pk]
  "module_id" bigserial [pk]
  "account_id" bigserial [pk]
  "started_at" timestamptz [not null, default: `now()`]
  "ended_at" timestamptz
  "price" float8 [not null, default: 0]
}

Table "module" {
  "id" bigserial [pk]
  "code" varchar [not null]
}

Table "permission" {
  "id" bigserial [pk]
  "code" varchar [not null, unique]
  "parent_id" int8 [null]
}

Table "role" {
  "id" bigserial [pk]
  "name" varchar [not null]
  "description" varchar
  "account_id" bigserial [not null]

  indexes {
    (name, account_id) [unique]
  }
}

Table "role_permission" {
  "role_id" bigserial [pk]
  "permission_id" bigserial [pk]
}

Table "session" {
  "id" uuid [pk]
  "user_id" bigserial [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "expires_at" timestamptz [not null]
}

Table "user" {
  "id" bigserial [pk]
  "username" varchar [not null]
  "password" varchar [not null]
  "name" varchar [not null]
  "lastname" varchar [not null]
  "email" varchar [not null]
  "phone" varchar
  "active" bool [not null, default: true]
  "is_admin" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "password_changed_at" timestamptz [not null, default: `now()`]
  "role_id" bigserial [not null]
  "account_id" bigserial [not null]

  indexes {
    (username, account_id) [unique]
  }
}

Ref:"account"."id" < "account_address"."account_id"

Ref:"account"."id" < "account_module"."account_id"

Ref:"module"."id" < "account_module"."module_id"

Ref:"permission"."id" < "permission"."parent_id"

Ref:"account"."id" < "role"."account_id"

Ref:"role"."id" < "role_permission"."role_id"

Ref:"permission"."id" < "role_permission"."permission_id"

Ref:"account"."id" < "user"."account_id"

Ref:"role"."id" < "user"."role_id"

Ref:"user"."id" < "session"."user_id"
